[package]
name = "guttt"
version = "0.1.0"
authors = ["Kimapr <dmitriy.tillyaev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1.6.0"
rand = "0.7.2"
libguttt = { path = "libguttt" }
